--- a/configs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32.yaml
+++ b/configs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32.yaml
@@ -1,5 +1,5 @@
 exp_root_dir: "outputs"
-name: "image-to-shape-diffusion/clip-dino-rgb-pixart-lr2e4-ddim"
+name: "image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32"
 tag: "${rmspace:${system.shape_model_type}+n${data.n_samples}+pfeat${system.shape_model.point_feats}+lr${system.optimizer.args.lr},_}"
 seed: 0
 
@@ -34,7 +34,7 @@ system:
   guidance_scale: 7.5
   num_inference_steps: 50
   eta: 0.0
-  extract_mesh_func: diffdmc
+  extract_mesh_func: mc
 
   shape_model_type: michelangelo-autoencoder
   shape_model:
