--- a/configs/shape-autoencoder/michelangelo-l768-e64-ne8-nd16.yaml
+++ b/configs/shape-autoencoder/michelangelo-l768-e64-ne8-nd16.yaml
@@ -1,6 +1,6 @@
 exp_root_dir: "outputs"
 name: "michelangelo-autoencoder/michelangelo-l768-e64-ne8-nd16"
-tag: "${rmspace:n${data.n_samples}+${data.supervision_type}+noise${data.noise_sigma}+${system.shape_model.embed_type}+dsample${system.shape_model.use_downsample}+pfeat${system.shape_model.point_feats}+logits${system.loss.lambda_logits}+kl${system.loss.lambda_kl}+lr${system.optimizer.args.lr},_}"
+tag: "${rmspace:n${data.n_samples}+${data.supervision_type}+${system.shape_model.embed_type}+dsample${system.shape_model.use_downsample}+pfeat${system.shape_model.point_feats}+logits${system.loss.lambda_logits}+kl${system.loss.lambda_kl}+lr${system.optimizer.args.lr},_}"
 seed: 0
 
 data_type: "Objaverse-datamodule"
@@ -86,7 +86,7 @@ trainer:
   num_sanity_val_steps: 1
   check_val_every_n_epoch: 600
   enable_progress_bar: true
-  precision: 16-mixed
+  precision: bf16-mixed
 
 checkpoint:
   save_last: true
