--- a/configs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32.yaml
+++ b/configs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32.yaml
@@ -36,6 +36,45 @@ system:
   eta: 0.0
   extract_mesh_func: mc
 
+  shape_model_type: dora-autoencoder
+  shape_model:
+    pretrained_model_name_or_path: craftsman-DoraVAE/model.ckpt
+    n_samples: 16384
+    with_sharp_data: true
+    use_downsample: true
+    num_latents: 2048
+    embed_dim: 64
+    point_feats: 3
+    out_dim: 1
+    num_freqs: 8
+    include_pi: false
+    heads: 12
+    width: 768
+    num_encoder_layers: 8
+    num_decoder_layers: 16
+    use_ln_post: true
+    init_scale: 0.25
+    qkv_bias: false
+    use_flash: true
+    use_checkpoint: true
+    
+
+  condition_model_type: "cond-embedder"
+  condition_model:
+    pretrained_clip_name_or_path: openai/clip-vit-large-patch14
+    pretrained_dino_name_or_path: facebook/dinov2-base
+    freeze_modulation_clip: true
+    freeze_modulation_dino: true
+    encode_camera: false
+    camera_embeds_dim: 0
+    n_views: ${data.n_views}
+    empty_embeds_ratio: 0.1
+    normalize_embeds: false
+    zero_uncond_embeds: true
+    linear_proj_init: constant
+    image_size_dino: 224
+    image_size_clip: 224
+
   denoiser_model_type: "pixart-denoiser"
   denoiser_model:
     input_channels: ${system.shape_model.embed_dim}
