--- a/configs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32.yaml
+++ b/configs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32.yaml
@@ -8,7 +8,7 @@ data:
   local_dir: ./data/shapenet_bench
   load_geometry: true
   geo_data_type: "sdf" 
-  geo_data_path: data/Objaverse_100k/surfaces
+  geo_data_path: ./data/shapenet_bench
   sampling_strategy: null
   n_samples: 16384
   
