--- a/configs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32-class-conditioned.yaml
+++ b/configs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32-class-conditioned.yaml
@@ -117,7 +117,7 @@ system:
   optimizer:
     name: AdamW
     args:
-      lr: 2.e-4
+      lr: 1.e-4
       betas: [0.9, 0.99]
       eps: 1.e-6
 
@@ -135,6 +135,7 @@ trainer:
   check_val_every_n_epoch: 1
   enable_progress_bar: true
   precision: bf16-mixed
+  strategy: ddp_find_unused_parameters_true
 
 checkpoint:
   save_last: true
