--- a/configs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32-class-conditioned.yaml
+++ b/configs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32-class-conditioned.yaml
@@ -130,7 +130,7 @@ system:
 
 trainer:
   num_nodes: 1
-  max_epochs: 100000
+  max_epochs: 10000000
   log_every_n_steps: 4
   num_sanity_val_steps: 1
   check_val_every_n_epoch: 1
