--- a/configs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32-class-conditioned.yaml
+++ b/configs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32-class-conditioned.yaml
@@ -24,7 +24,7 @@ data:
   background_color: [0.5, 0.5, 0.5]
   marign_pix_dis: 30
 
-  batch_size: 8
+  batch_size: 4
   num_workers: 2
 
 system_type: "shape-diffusion-system"
@@ -136,6 +136,7 @@ trainer:
   check_val_every_n_epoch: 1
   enable_progress_bar: true
   precision: bf16-mixed
+  strategy: ddp_find_unused_parameters_true
 
 checkpoint:
   save_last: true
