--- a/configs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32-class-conditioned.yaml
+++ b/configs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32-class-conditioned.yaml
@@ -115,12 +115,12 @@ system:
     loss_type: "mse"
     lambda_diffusion: 1.
 
-  optimizer:
-    name: DeepSpeedCPUAdam
-    args:
-      lr: 1.e-4
-      betas: [0.9, 0.99]
-      eps: 1.e-6
+  # optimizer:
+  #   name: DeepSpeedCPUAdam
+  #   args:
+  #     lr: 1.e-4
+  #     betas: [0.9, 0.99]
+  #     eps: 1.e-6
 
   scheduler:
     name: CosineAnnealingLR
