--- a/deepspeed_config.json
+++ b/deepspeed_config.json
@@ -5,6 +5,14 @@
             "device": "cpu",
             "pin_memory": true
         },
+        "optimizer": {
+            "type": "DeepSpeedCPUAdam",
+            "params": {
+              "lr": 1e-4,
+              "betas": [0.9, 0.99],
+              "eps": 1e-6
+            }
+          },
         "allgather_partitions": true,
         "allgather_bucket_size": 2e8,
         "overlap_comm": true,
