--- a/deepspeed_config.json
+++ b/deepspeed_config.json
@@ -15,7 +15,7 @@
     },
     
     "optimizer": {
-        "type": "DeepSpeedCPUAdam",
+        "type": "AdamW",
         "params": {
           "lr": 1e-4,
           "betas": [0.9, 0.99],
