--- a/configs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32-class-conditioned.yaml
+++ b/configs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32-class-conditioned.yaml
@@ -128,7 +128,7 @@ system:
       T_max: 1902000
       eta_min: 1e-5
 
-resume: class_conditioned_outputs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32/dora-autoencoder+n16384+pfeat3+lr0.0001/ckpts/last.ckpt
+# resume: class_conditioned_outputs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32/dora-autoencoder+n16384+pfeat3+lr0.0001/ckpts/last.ckpt
 
 trainer:
   num_nodes: 1
