--- a/configs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32-class-conditioned_nods.yaml
+++ b/configs/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32-class-conditioned_nods.yaml
@@ -1,4 +1,3 @@
-tag: "${rmspace:${system.shape_model_type}+n${data.n_samples}+pfeat${system.shape_model.point_feats}+lr${system.optimizer.args.lr},_}"
 exp_root_dir: "class_conditioned_outputs_nods"
 name: "image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32"
 tag: "${rmspace:${system.shape_model_type}+n${data.n_samples}+pfeat${system.shape_model.point_feats}+lr${system.optimizer.args.lr},_}"
@@ -34,7 +33,7 @@ system:
   val_samples_json: "val_data/images/val_samples_rgb_image.json"
   z_scale_factor: 1.0
   guidance_scale: 3.0
-  num_inference_steps: 50
+  num_inference_steps: 250
   eta: 0.0
   extract_mesh_func: mc
 
@@ -129,7 +128,7 @@ system:
       T_max: 1902000
       eta_min: 1e-5
 
-resume: class_conditioned_outputs_nods/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32/dora-autoencoder+n16384+pfeat3+lr0.0001/ckpts/last.ckpt
+resume: class_conditioned_outputs_nods/image-to-shape-diffusion/DoraVAE-dinov2reglarge518-pixart-rectified-flow-dit32/dora-autoencoder+n16384+pfeat3+lr0.0001/ckpts/last-v3.ckpt
 
 trainer:
   num_nodes: 1
